-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.1
-
None
on http://qt-project.org/doc/qt-5/plugins-howto.html
There are some old and no-longer present classes, and missing links to other classes in the documentation for the
list of plugin classes. I see only 4 out of 14 linked. Some classes I can't find in the source anywhere:
QTextCodecPlugin, QDecorationPlugin, QFontEnginePlugin, QKbdDriverPlugin, QScreenDriverPlugin, QMouseDriverPlugin.
Missing links to docs: QSqlDriverPlugin, QAccessibleBridgePlugin
Here is the list of plugin classes I was able to find. I think all of these should be on that list.
And also this one: http://qt-project.org/doc/qt-5/plugins.html
QGenericPlugin, QGenericPluginFactory, QAccessiblePlugin, QAccessibleBridgePlugin, QDesignerCustomWidgetInterface,
QIconEnginePlugin, QImageIOPlugin, QMediaServiceProviderPlugin, QQmlExtensionPlugin,
QSensorPluginInterface, QScriptExtensionPlugin, QSqlDriverPlugin, QStylePlugin
Also, from http://qt-project.org/doc/qt-5/reference-overview.html
you might want to add a link to the plugins-howto.html page.