Doc: deletion plugin-howtos.qdoc

Document is moved to qtdoc/doc/src/howtos
Including snippet files.

Task-number: QTBUG-38412
Change-Id: Iba15689ad63e17c370c21c9ee5a1fff40c79fcec
Reviewed-by: Topi Reiniö <topi.reinio@digia.com>
Reviewed-by: Martin Smith <martin.smith@digia.com>

cregit: ded6514de8b9975f1afd4f63b852c732e0125551 https://github.com/qt/qtbase/commit/ded6514de8b9975f1afd4f63b852c732e0125551