src/corelib/doc/snippets/code/doc_src_plugins-howto.cpp
@@ -1,2 +1,0 @@
-DECL|class|MyStylePlugin
-DECL|function|create
